# libeatmydata

./: .bzrignore  .gitattributes  .gitignore  .quickly  .travis.yml  AUTHORS  Makefile  Makefile.am  Makefile.linux.old  Makefile.solaris  README  README.md  build_emd_rpm.sh  configure.ac  configure.in  eatmydata.c  eatmydata.in  eatmydata.sh.in  eatmydata.spec  eatmydatatest.c  fsynctest.c  fsynctest.result  libeatmydata.spec.in  start_suspended.sh  test_run.sh
config/: autorun.sh  lcov.am  pandora-plugin  pandora-plugin.ini
debian/: README.Debian  README.source  changelog  control  copyright
docs/: Doxyfile  header.html.in
libeatmydata/: libeatmydata.c  portability.h  visibility.h
libeatmydata/test/: eatmydatatest.c  eatmydatatest_largefile.c  fcntltest.c  fsynctest.c  syncfstest.c  tst-cancel4.c  tst-invalidfd.c  tst-key4.c
m4/: pandora_64bit.m4  pandora_bison.m4  pandora_canonical.m4  pandora_check_compiler_version.m4  pandora_check_cxx_standard.m4  pandora_cinttypes.m4  pandora_compile_stdcxx_0x.m4  pandora_cstdint.m4  pandora_cxx_demangle.m4  pandora_drizzle_build.m4  pandora_enable_dtrace.m4  pandora_ensure_gcc_version.m4  pandora_extensions.m4  pandora_fdatasync.m4  pandora_flex.m4  pandora_have_better_malloc.m4  pandora_have_boost.m4  pandora_have_gcc_atomics.m4  pandora_have_libaio.m4  pandora_have_libavahi.m4  pandora_have_libbdb.m4  pandora_have_libboost_date_time.m4  pandora_have_libboost_filesystem.m4  pandora_have_libboost_iostreams.m4  pandora_have_libboost_options.m4  pandora_have_libboost_regex.m4  pandora_have_libboost_test.m4  pandora_have_libboost_thread.m4  pandora_have_libcassandra.m4  pandora_have_libcurl.m4  pandora_have_libdl.m4  pandora_have_libdrizzle.m4  pandora_have_libevent.m4  pandora_have_libgearman.m4  pandora_have_libgtest.m4  pandora_have_libhaildb.m4  pandora_have_libhashkit.m4  pandora_have_libldap.m4  pandora_have_libmemcached.m4  pandora_have_libmysqlclient.m4  (+37 more)
quickly/templates/drizzle-plugin/: commandsconfig
quickly/templates/drizzle-plugin/project_root/: module.cc  plugin.ini  project_name.cc  project_name.h
quickly/templates/drizzle-plugin/project_root/tests/t/: master.opt
quickly/templates/pandora-build/: add.py  commandsconfig  create.py  license.py  run.py  tutorial.py  upgrade.py
quickly/templates/pandora-build-c/: commandsconfig
quickly/templates/pandora-build-c/project_root/: configure.ac  valgrind.suppressions
quickly/templates/pandora-build-c/project_root/docs/: Doxyfile
quickly/templates/pandora-build-c/project_root/project_name/: project_name.c  project_name.h
quickly/templates/pandora-build-c/project_root/project_name/test/: basic.c
quickly/templates/pandora-build-c/project_root_application/: Makefile.am
quickly/templates/pandora-build-c/project_root_library/: Makefile.am
quickly/templates/pandora-build/internal/: apportutils.py  bzrutils.py  launchpad_helper.py  naming.py  packaging.py  pandoramacros.py  quicklyutils.py
quickly/templates/pandora-build/project_root/: configure.ac  test_run.sh
quickly/templates/pandora-build/project_root/config/: pandora-plugin.ini
quickly/templates/pandora-build/project_root/project_name/: class_name.cc  class_name.h  visibility.h
quickly/templates/pandora-build/project_root/project_name/test/: basic.cc
quickly/templates/pandora-build/project_root_application/: Makefile.am
quickly/templates/pandora-build/project_root_library/: Makefile.am
